<resources>
    <string name="app_name">Rw</string>
    <string name="login">登录</string>
    <string name="loging">登录中...</string>
    <string name="updating">提交中...</string>
    <string name="loading">加载中...</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="applyin">申请入驻</string>
    <string name="message">消息</string>
    <string name="work">办公</string>
    <string name="increment">增值服务</string>
    <string name="social">社区</string>
    <string name="mine">我的</string>
    <string name="openDoor">芝麻开门</string>
    <string name="help">帮助</string>
    <string name="tempKey">临时钥匙</string>
    <string name="sendTempKey">发送临时钥匙</string>
    <string name="ruoweizhiye">若为置业</string>
    <string name="tempReason">事由</string>
    <string name="sendMsg">发送短信</string>
    <string name="multiInput">多行输入</string>
    <string name="doorOpened">门开了,欢迎光临</string>
    <string name="conversationList">会话列表</string>
    <string name="systemMessage">系统消息</string>
    <string name="messageTitle">商务中心</string>
    <string name="more">更多</string>
    <string name="addPhone">添加电话</string>
    <string name="showDetail">查看资料</string>
    <string name="modifiComment">修改备注</string>
    <string name="shangWu">商务电话</string>
    <string name="haoYou">我的好友</string>
    <string name="newMessage">新的消息</string>
    <string name="zhiDi">置地公告</string>
    <string name="gongSi">公司公告</string>
    <string name="qiYe">企业通讯录</string>
    <string name="changYong">常用联系人</string>
    <string name="readAll">阅读全文</string>
    <string name="unReaded">未读</string>
    <string name="Readed">已读</string>
    <string name="gonggao">公告</string>
    <string name="modifiremark">修改备注</string>
    <string name="remarkName">备注名</string>
    <string name="completed">完成</string>
    <string name="friendVerifi">好友验证</string>
    <string name="friendVerifiHint">您需要发送验证申请,等对方通过</string>
    <string name="unLimited">无限量</string>
    <string name="speechCall">语音通话</string>
    <string name="phoneMeeting">电话会议</string>
    <string name="netCall">网络电话</string>
    <string name="normalCall">普通电话</string>
    <string name="inviteNum">可邀请%1$d人</string>
    <string name="organization">组织架构</string>
    <string name="orgNum">(%1$s人)</string>
    <string name="myTeam">我的团队</string>
    <string name="addFriend">添加好友</string>
    <string name="addFriend2">加好友</string>
    <string name="phoneContact">手机通讯录</string>
    <string name="newFriend">新的好友</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="receive">接受</string>
    <string name="received">已接受</string>
    <string name="addFriendHint">请求添加你好友</string>
    <string name="groupChat">群聊</string>
    <string name="createGroupChat">创建群聊</string>
    <string name="createGroupChatName">创建群名字</string>
    <string name="confirm">确定</string>
    <string name="nextStep">下一步</string>
    <string name="meetintSelectHint1">请选择1-7人进行通话</string>
    <string name="meetintSelectHint2">请选择接收人</string>
    <string name="choosen">已选择</string>
    <string name="containNum">确定(%1$d/7)</string>
    <string name="containRollNum">确定(%1$d)</string>
    <string name="numCantOverHint">已达到人数上限</string>
    <string name="phoneContacts">手机通讯录</string>
    <string name="recentCallName">最近通话:</string>
    <string name="noRecentCallName">最近通话:暂无</string>
    <string name="toastAtLeastOneOp">请选择一位通话对象</string>
    <string name="toastMeetingAtLeastOneOp">请选择至少一位通话对象</string>
    <string name="toastatleast3formeeting">至少三人可以发起电话会议</string>
    <string name="onlyOneOp">只能选择一位通话对象</string>
    <string name="nosensePhoneNum">无效的电话号码</string>
    <string name="search">搜索</string>
    <string name="notFind">没有找到\"%1$s\"</string>
    <string name="searchCannotEmpty">搜索内容不能为空</string>
    <string name="compWork">企业办公</string>
    <string name="intelligentMobileWork">智能移动办公</string>
    <string name="signLabel">签到</string>
    <string name="dairyLabel">日志</string>
    <string name="approveLabel">审批</string>
    <string name="cardLabel">考勤打卡</string>
    <string name="rollLabel">DO一下</string>
    <string name="more_wedo">MORE WEDO</string>
    <string name="approvebyme">待我审批</string>
    <string name="fromme">我发起的</string>
    <string name="getout">外出</string>
    <string name="askforleave">请假</string>
    <string name="extrawork">加班</string>
    <string name="wiped">报销</string>
    <string name="daiwoshenpi">待我审批的</string>
    <string name="woyishenpi">我已审批的</string>
    <string name="passed">已通过</string>
    <string name="pass">通过</string>
    <string name="approving">审核中</string>
    <string name="unpassed">未通过</string>
    <string name="agree">同意</string>
    <string name="disagree">拒绝</string>
    <string name="commit">提交</string>
    <string name="approver">审批人</string>
    <string name="picture">图片</string>
    <string name="reason">加班事由</string>
    <string name="reasonHint">请输入加班理由(必填)</string>
    <string name="durationHint">请输入加班时间(小时)</string>
    <string name="selectHint">请选择(必填)</string>
    <string name="startTime">开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="extraworkType">加班类型</string>
    <string name="extraworkDuration">加班时间</string>
    <string name="hours">小时</string>
    <string name="day">天</string>
    <string name="leaveType">请假类型</string>
    <string name="leaveTime">请假时间</string>
    <string name="leaveTimeHint">请输入请假时间(小时)</string>
    <string name="leaveReason">请假事由</string>
    <string name="leaveReasonHint">请输入请假事由(必填)</string>
    <string name="getOutTime">外出时间</string>
    <string name="getOutTimeHint">请输入外出时间(小时)</string>
    <string name="getOutReason">外出事由</string>
    <string name="getOutReasonHint">请输入外出事由(必填)</string>
    <string name="wipedTitle">报销明细(%1$d)</string>
    <string name="wipedMoney">报销金额</string>
    <string name="wipedType">报销类别</string>
    <string name="wipedDetail">费用明细</string>
    <string name="wipedSum">总金额报销: %1$.2f元</string>
    <string name="addWipedDetail">增加报销明细</string>
    <string name="access">附件</string>
    <string name="wipedMoneyHint">请输入数字金额(必填)</string>
    <string name="wipedTypeHint">如:采购经费、活动经费(必填)</string>
    <string name="wipedDetailHint">请输入费用明细描述</string>
    <string name="shangban">上班</string>
    <string name="xiaban">下班</string>
    <string name="shangbanCardHint">上班请打卡</string>
    <string name="xiabanCardHint">下班请打卡</string>
    <string name="card">打卡</string>
    <string name="carded">已打卡</string>
    <string name="sendLog">我发出的</string>
    <string name="receivedLog">我收到的</string>
    <string name="shangbanCard">上班打卡</string>
    <string name="xiabanCard">下班打卡</string>
    <string name="rollme">DO我的人</string>
    <string name="today">今天</string>
    <string name="receiver">接收人</string>
    <string name="selectedRollNum">已选择:%d人</string>
    <string name="sendtime">发送时间</string>
    <string name="sendnow">立即发送</string>
    <string name="deadline">事件截止时间</string>
    <string name="deadlinehint">期待完成此次事件的时间</string>
    <string name="content">内容</string>
    <string name="inputContent">输入内容</string>
    <string name="title">标题</string>
    <string name="titleHint">请填写日志标题</string>
    <string name="signed">已签到</string>
    <string name="signedtoday">今日你已签到</string>
    <string name="unsignedtoday">今日你还未签到</string>
    <string name="signList">列表</string>
    <string name="send">发送</string>
    <string name="writeLog">写日志</string>
    <string name="sender">发送人</string>
    <string name="publishType">发布类型</string>
    <string name="incrementService">增值服务</string>
    <string name="OfficeAppontment">预约办公室</string>
    <string name="askForRepaire">报修</string>
    <string name="alwaysUsed">常用</string>
    <string name="print">打印</string>
    <string name="consumeMateria">耗材</string>
    <string name="clear">清洁</string>
    <string name="express">快递</string>
    <string name="rentcar">租车</string>
    <string name="writeMateria">办公文具</string>
    <string name="incrementAdd">添加</string>
    <string name="expect">敬请期待</string>
    <string name="waitexpect">敬请期待...</string>
    <string name="compSocial">社区交流</string>
    <string name="publish">发布</string>
    <string name="find">发现</string>
    <string name="homepage">主页</string>
    <string name="channelChosen">频道精选</string>
    <string name="channelChosenEn">Select Channel</string>
    <string name="Chosen">精选</string>
    <string name="ChosenEn">Select</string>
    <string name="projectCommunication">项目交流</string>
    <string name="ActivityCommunication">活动交流</string>
    <string name="CultureCommunication">文化交流</string>
    <string name="CoopCommunication">合作交流</string>
    <string name="projectCommunicationTitle">企业项目交流</string>
    <string name="ActivityCommunicationTitle">企业活动交流</string>
    <string name="CultureCommunicationTitle">企业文化交流</string>
    <string name="CoopCommunicationTitle">企业合作交流</string>
    <string name="addFacus">+关注</string>
    <string name="Facused">已关注</string>
    <string name="MyFacus">我关注的</string>
    <string name="FacusedCompany">关注的公司</string>
    <string name="MyFacusEn">focus on</string>
    <string name="AllFacus">全部 ></string>
    <string name="FacusNum">关注的人</string>
    <string name="cancleFacus">取消关注</string>
    <string name="commDetail">详情</string>
    <string name="commDetailHint">请输入详情(必填)</string>
    <string name="compIntroduction">公司介绍</string>
    <string name="compIntroductionEn">Company introduction</string>
    <string name="compDynamic">公司动态</string>
    <string name="compDynamicEn">Company dynamic</string>
    <string name="order">订单</string>
    <string name="facus">关注</string>
    <string name="company">公司</string>
    <string name="companyBoard">置业公告板</string>
    <string name="companyBoardEn">Real estate board</string>
    <string name="gender">性别</string>
    <string name="phoneNum">电话</string>
    <string name="chagePsw">修改密码</string>
    <string name="contactUs">联系我们</string>
    <string name="fromAlbum">从相册中选择</string>
    <string name="fromCamera">拍照</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="setting">设置</string>
    <string name="currentVer">当前版本</string>
    <string name="clearCache">清除缓存</string>
    <string name="FeedBack">意见反馈</string>
    <string name="logOut">退出登录</string>
    <string name="FeedBackHint">请输入反馈意见</string>
    <string name="changePassWord">修改密码</string>
    <string name="originPswHint">请输入原始密码</string>
    <string name="newPswHint">请输入新密码</string>
    <string name="certainPswHint">请确认新密码</string>
    <string name="verifiCodeHint">请输入手机短信验证码</string>
    <string name="verifiCode">获取验证码</string>
    <string name="verifiCodeRetry">请(%1$d)秒后重试</string>
    <string name="changeCertain">确认修改</string>
    <string name="minePublish">我发布的</string>
    <string name="allorder">全部</string>
    <string name="lastweek">近一周</string>
    <string name="lastmonth">近一月</string>
    <string name="wallet">钱包</string>
    <string name="personerWallet">个人钱包</string>
    <string name="companyWallet">公司钱包</string>
    <string name="exchange">汇率换算</string>
    <string name="dialogTitle">提示</string>
    <string name="dialogCancle">取消</string>
    <string name="dialogConfirm">确认</string>
    <string name="deleteHint1">确认删除\"%1$s\"?</string>
    <string name="editExitHint1">退出页面内容将不会被保存</string>
    <string name="editExitHint2">确认退出?</string>
    <string name="noticedelHint1">是否删除这条公告?</string>
    <string name="isClearCache">是否清空缓存?</string>
    <string name="isLogOut">是否退出登录?</string>
    <string name="loadMore">正在加载...</string>
    <string name="doPhone">进行电话</string>
    <string name="calling">通话中</string>
    <string name="canNotAddMoreCallMember">最多添加7名会议人员</string>
    <string name="commitSuccessed">提交成功</string>
    <string name="commitFailed">提交失败,请重试</string>
    <string name="loadFailed">加载失败</string>
    <string name="reRoad">用户验证失败,正在重新验证</string>
    <string name="reRoadSuccess">身份验证成功</string>
    <string name="reRoadFailed">身份验证失败</string>
</resources>