<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_roll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bac_color_EFEFF4"
    tools:context="com.home.rw.mvp.ui.activitys.work.SendRollActivity">
    <include layout="@layout/common_toolbar"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/rl_receiver"
        android:background="@drawable/selector_layoutbac">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/receiver"
            />
        <ImageView
            android:layout_width="13dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_right_more"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/selector_layoutbac">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/sendtime"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/sendnow"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_383838"
            android:layout_marginRight="10dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"/>
    <RelativeLayout
        android:id="@+id/rl_deadLine"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/selector_layoutbac">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/deadline"
            />
        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/deadlinehint"
            android:textColor="@color/text_color_878787"
            android:layout_marginRight="10dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:background="@color/widowColor"
        android:textColor="@color/black"
        android:text="@string/content"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/widowColor"
        android:gravity="start"
        android:textColorHint="@color/text_color_878787"
        android:hint="@string/inputContent"
        android:paddingLeft="15dp"
        android:textSize="16sp"
        android:textColor="@color/text_color_878787"
        android:paddingTop="5dp"/>

    <ImageView
        android:id="@+id/iv_rollme"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:src="@drawable/btn_roll_me"/>

</LinearLayout>
