<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_write_log"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bac_color_EFEFF4"
    tools:context="com.home.rw.mvp.ui.activitys.work.WriteLogActivity">
    <include layout="@layout/common_toolbar"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/widowColor">
        <TextView
            android:id="@+id/title"
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:text="@string/title"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/title"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:maxLength="8"
            android:background="@null"
            android:singleLine="true"
            android:textColor="@color/text_color_949494"
            android:textColorHint="@color/text_color_949494"
            android:hint="@string/titleHint"

            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"/>
    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:gravity="start"
        android:paddingTop="15dp"
        android:maxLength="180"
        android:textColorHint="@color/text_color_949494"
        android:hint="@string/content"
        android:textColor="@color/text_color_949494"
        android:background="@color/widowColor"/>
    <Button
        android:id="@+id/bt_commit"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/widowColor"
        android:textSize="16sp"
        android:text="@string/commit"
        android:background="@drawable/shape_write_log_commit"
        android:layout_marginRight="40dp"/>
</LinearLayout>
