<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@color/widowColor">
    <View
        android:id="@+id/top_sperate"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/bac_color_EFEFF4"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/wipedTitle"
            android:textSize="16sp"
            android:layout_toLeftOf="@+id/rl_del"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:id="@+id/rl_del"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/text_color_F36C61">
            <ImageView
                android:id="@+id/iv_del"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_del_wiped"
                />
        </RelativeLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"
        android:layout_marginLeft="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_wipedmoney"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/wipedMoney"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_wipedmoney"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_wipedmoney"
            android:hint="@string/wipedMoneyHint"
            android:textColorHint="@color/text_color_A0A0A0"
            android:textSize="16sp"
            android:inputType="number"
            android:gravity="center_vertical"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@null"
            android:singleLine="true"
            android:textColor="@color/text_color_A0A0A0"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"
        android:layout_marginLeft="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_wipedtype"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/wipedType"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_wipedtype"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_wipedtype"
            android:hint="@string/wipedTypeHint"
            android:textColorHint="@color/text_color_A0A0A0"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@null"
            android:singleLine="true"
            android:textColor="@color/text_color_A0A0A0"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"
        android:layout_marginLeft="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:id="@+id/tv_wipeddetail"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/wipedDetail"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_wipeddetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_wipeddetail"
            android:hint="@string/wipedDetailHint"
            android:textColorHint="@color/text_color_A0A0A0"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@null"
            android:gravity="start"
            android:singleLine="true"
            android:textColor="@color/text_color_A0A0A0"/>
    </RelativeLayout>
</LinearLayout>