<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:id="@+id/segment"
    android:layout_below="@+id/toolbar"
    android:background="@color/bac_color_EFEFF4"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/widowColor"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/passed"
            android:gravity="center" />
        <View
            android:id="@+id/sperate1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bac_color_EFEFF4"/>
        <TextView
            android:id="@+id/tv_mid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/approving"
            android:visibility="gone"
            android:gravity="center" />
        <View
            android:id="@+id/sperate2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/bac_color_EFEFF4"/>
        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/unpassed"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_E4E4E4"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>