<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#E9EDF0">
    <include layout="@layout/common_toolbar"
        />
    <!-- 轮播图 -->
    <RelativeLayout
        android:id="@+id/cur"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_below="@+id/toolbar">

        <com.home.rw.widget.AutoScrollViewPager
            android:id="@+id/AutoScrollViewPager"
            android:layout_width="match_parent"
            android:focusable="true"
            android:layout_height="175dp"
            />

        <LinearLayout
            android:id="@+id/viewPagerIndicator"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/bac_work"
        android:layout_below="@+id/cur">
        <TextView
            android:id="@+id/midTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:text="@string/intelligentMobileWork"
            android:textColor="#FFFFFF"
            />
        <LinearLayout
            android:id="@+id/ll_signin"
            android:layout_width="70dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_signin"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/bg_white"
                android:text="@string/signLabel"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_height="30dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_dairy"
            android:layout_width="70dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_dairy"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/bg_white"
                android:text="@string/dairyLabel"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_height="30dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_approve"
            android:layout_width="70dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:layout_marginRight="18dp"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_approve" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/bg_white"
                android:text="@string/approveLabel"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_height="30dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_check"
            android:layout_width="70dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_check"/>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/bg_white"
                android:text="@string/cardLabel"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_height="30dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            android:layout_centerInParent="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_roll"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@color/bg_white"
            android:text="@string/more_wedo"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_below="@+id/ll_roll"
            android:layout_height="30dp" />
    </RelativeLayout>

</RelativeLayout>